--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="images/webdev.svg" />
+        <img class="hero-img" src="webdev.svg" />
         <h1 class="hero-heading">Shrista Baruah  <span class="heading-inverted"> Web developer</span></h1>
     </header>
 
