--- a/blogs.html
+++ b/blogs.html
@@ -17,7 +17,7 @@
                 <a class="link " href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/Blogs.html">blogs</a>
+                <a class="link link-active" href="/Blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
