--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
     <ul class="list-non-bullet">
 
         <li>
-            <article class="showcase-list container container-center ">
+            <article class="showcase-list container container-center ow ">
                 <h1>Stock Profit-Loss Calculator(Mark 14)</h1>
             <small>Javascript</small>
             <p>  A web app made using VanillaJS that calculates how much profit or loss you have made from the stocks that you bought!</p>
@@ -55,7 +55,7 @@
         </li>
 
         <li>
-            <article class="showcase-list container container-center ">
+            <article class="showcase-list container container-center ow ">
                 <h1>Fun with Triangle(Mark 12)</h1>
             <small>Vanilla Javascript</small>
             <p>  A fun web app made using VanillaJS to learn about Triangles!</p>
@@ -81,7 +81,7 @@
         </li>
 
         <li>
-            <article class="showcase-list container container-center ">
+            <article class="showcase-list container container-center ow">
                 <h1>Cash-Register(Mark 10)</h1>
             <small>Javascript</small>
             <p> A cash register made using JavaScript that helps the user by telling the minimum number of notes needed to return the change to the customer.</p>
@@ -107,7 +107,7 @@
         </li>
 
         <li>
-            <article class="showcase-list container container-center ">
+            <article class="showcase-list container container-center ow">
                 <h1>Emoji interpreter(Mark 08)</h1>
             <small>ReactJS</small>
             <p>I struggle with understanding the emojis. Do you too? If yes, then see this library of emojis with meaning</p>
@@ -133,7 +133,7 @@
         </li>
 
         <li>
-            <article class="showcase-list container container-center ">
+            <article class="showcase-list container container-center ow ">
                 <h1>Banana/Minion Talk(Mark 06)</h1>
             <small>Vanilla JS</small>
             <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
@@ -159,7 +159,7 @@
         </li>
 
         <li>
-            <article class="showcase-list container container-center ">
+            <article class="showcase-list container container-center ow ">
                 <h1>how well do you know me?(Mark 02)</h1>
                 <small>NodeJS</small>
                 <p>A CLI app built with <strong>nodeJS</strong>. Which tests how well do you know me?</p>
