--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
             <small>Vanilla Javascript</small>
             <p>  A fun web app made using VanillaJS to learn about Triangles!</p>
 
-            <a class="link link-primary" href="https://recomm.netlify.app/">Live Project</a>
+            <a class="link link-primary" href="https://fun-time-with-triangle.netlify.app/">Live Project</a>
             <a class="link link-secondary" href="https://github.com/shristabaruah/Know-Triangle">View Source</a>
 
             </article>
