--- a/blogs.html
+++ b/blogs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <title>blogs | Shrista Baruah</title>
 </head>
 <body>
@@ -53,21 +54,21 @@
     </ul>
 
     <footer class="footer">
-        <div class="footer-header">social media presence</div>
+        <div class="footer-header">Connect with me!!</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link" href="https://github.com/shristabaruah">
-                    github
+                    <i class="fab fa-github"></i>
                 </a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="https://twitter.com/rockzy_shrista">
-                    twitter
+                    <i class="fab fa-twitter"></i>
                 </a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="https://www.linkedin.com/in/shrista-baruah/">
-                    linkedin
+                    <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
             
