--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home | Shrista Baruah</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -51,21 +52,21 @@
     </section>
 
     <footer class="footer">
-        <div class="footer-header">Social media Handles</div>
+        <div class="footer-header">Connect with me!!</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link" href="https://github.com/shristabaruah">
-                    Github
+                    <i class="fab fa-github"></i>
                 </a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="https://twitter.com/rockzy_shrista">
-                    Twitter
+                    <i class="fab fa-twitter"></i>
                 </a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="https://www.linkedin.com/in/shrista-baruah/">
-                    Linkedin
+                    <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
             
