--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container container-center">
             <h1>Projects</h1>
             <p>I like to showcase my work and thus, you can see my projects hosted online</p>
-            <a class="link link-primary" href="/projects.html">See Projects</a>
+            <a target="blank" class="link link-primary" href="/projects.html">See Projects</a>
         </div>
     </section>
 
@@ -47,7 +47,7 @@
         <div class="container container-center">
             <h1>Blogs</h1>
             <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
-            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
+            <a target="blank" class="link link-secondary" href="/blogs.html">Read Blogs</a>
         </div>
     </section>
 
@@ -55,17 +55,17 @@
         <div class="footer-header">Connect with me!!</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/shristabaruah">
+                <a target="blank" class="link" href="https://github.com/shristabaruah">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/rockzy_shrista">
+                <a target="blank" class="link" href="https://twitter.com/rockzy_shrista">
                     <i class="fab fa-twitter"></i>
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/shrista-baruah/">
+                <a target="blank" class="link" href="https://www.linkedin.com/in/shrista-baruah/">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
