--- a/projects.html
+++ b/projects.html
@@ -165,7 +165,7 @@
                 <small>NodeJS</small>
                 <p>A CLI app built with <strong>nodeJS</strong>. Which tests how well do you know me?</p>
     
-                <a target="blank" class="link link-primary" href="https://replit.com/@shristabaruah/know-me">Live Project</a>
+                <a target="blank" class="link link-primary" href="https://replit.com/@shristabaruah/know-me?embed=1&output=1#index.js">Live Project</a>
                 <a target="blank" class="link link-secondary" href="https://github.com/shristabaruah/Game-Know-me">View Source</a>
             </article>
             
@@ -177,7 +177,7 @@
             <small>NodeJS, CHALK Library</small>
             <p>A CLI App in Javascript using Chalk library to add styling and hosted on repl.it for a fun quiz. Yoda is shown in "Star Wars" and you might have seen the movies a lot, but do you really know anything about him? Let's find out with this quiz!.</p>
 
-            <a target="blank" class="link link-primary" href="https://replit.com/@shristabaruah/Game-Yoda">Live Project</a>
+            <a target="blank" class="link link-primary" href="https://replit.com/@shristabaruah/Game-Yoda?embed=1&output=1#index.js">Live Project</a>
             <a target="blank" class="link link-secondary" href="https://github.com/shristabaruah/Game-Yoda/tree/master">View Source</a>
 
             </article>
