--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
             <small>NodeJS</small>
             <p>  Some good recommendations for diffrent genre movies. Made using ReactJS with love</p>
 
-            <a target="blank" class="link link-primary" href="https://81z6l.csb.app/">Live Project</a>
+            <a target="blank" class="link link-primary" href="https://i1gmi.csb.app/">Live Project</a>
             <a target="blank" class="link link-secondary" href="https://github.com/shristabaruah/Simple_Movie_Recommendor">View Source</a>
 
             </article>
