--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
         <li>
             <article class="showcase-list container container-center ">
                 <h1>Movie-Recommendor  (Mark 09)</h1>
-            <small>NodeJS</small>
+            <small>ReactJS</small>
             <p>  Some good recommendations for diffrent genre movies. Made using ReactJS with love</p>
 
             <a target="blank" class="link link-primary" href="https://i1gmi.csb.app/">Live Project</a>
